# wxHaskell

./: .gitignore  README.md  cabal.project  shell.nix
.github/workflows/: build.yml
bugs/: NonModalDialog.hs  SubMenu.hs  comctl32_fail.hs
samples/contrib/: Camels.hs  GLCanvas.hs  GLMultiCanvas.hs  NotebookRight.hs  PaintDirect.hs  samplesContrib.cabal
samples/test/: BoxedCombinator.hs  ChangeLog.md  LICENSE.txt  Resize.hs  STC.hs  STC2.hs  STCEvent.hs  STCLexer.hs  TreeCtrlTest.hs  UTF8.lhs  UTF8Sampler.hs  samplesTest.cabal
samples/test/XRCControls/: XRCControls_Wx.hs  XRCMenu.hs
samples/wx/: BouncingBalls.hs  ChangeLog.md  Controls.hs  CustomControl.hs  FileBrowse.hs  Grid.hs  HelloWorld.hs  ImageViewer.hs  ListCtrl.hs  ListView.hs  Minimal.hs  Paint.hs  Print.hs  Process.hs  PropertyGrid.hs  README  TestTaskBarIcon.hs  TimeFlows.hs  TimeFlowsEx.hs  makefile  samplesWx.cabal
samples/wxcore/: BouncingBalls.hs  ByeDemo.hs  HelloWorld.hs  ImageViewer.hs  LICENSE.txt  Minimal.hs  Paint.hs  PaintGC.hs  samplesWxcore.cabal
wx/: license.txt  wx.cabal
wx-config-win/wx-config-win/: wx-config.cpp
wx/src/Graphics/UI/: WX.hs
wx/src/Graphics/UI/WX/: Attributes.hs  Classes.hs  Controls.hs  Dialogs.hs  Draw.hs  Events.hs  Frame.hs  Layout.hs  Media.hs  Menu.hs  Timer.hs  TopLevelWindow.hs  Types.hs  Variable.hs  Window.hs
wxc/: .gitignore  CMakeLists.txt  GenerateVersionHeader.hs  Main.hs  Setup.hs  generate-version-header.sh  package.nix  wxc.cabal  wxc.pc.in
wxc/include/wxc/: wxc_glue.h
wxc/src/cpp/: apppath.cpp  defs.cpp  dragimage.cpp  eljaccelerator.cpp  eljartprov.cpp  eljaui.cpp  eljbitmap.cpp  eljbrush.cpp  eljbusyinfo.cpp  eljbutton.cpp  eljcalendarctrl.cpp  eljcaret.cpp  eljcheckbox.cpp  eljchecklistbox.cpp  eljchoice.cpp  eljclipboard.cpp  eljcoldata.cpp  eljcolour.cpp  eljcolourdlg.cpp  eljcombobox.cpp  eljcommand.cpp  eljconfigbase.cpp  eljcontrol.cpp  eljctxhelp.cpp  eljcursor.cpp  eljdataformat.cpp  eljdatetime.cpp  eljdc.cpp  eljdcsvg.cpp  eljdialog.cpp  eljdialup.cpp  eljdirdlg.cpp  eljdnd.cpp  eljdrawing.cpp  eljevent.cpp  eljfiledialog.cpp  eljfilehist.cpp  eljfindrepldlg.cpp  eljfont.cpp  eljfontdata.cpp  (+82 more)
wxc/src/include/: graphicscontext.h  managed.h  wrapper.h  wxc.h  wxc_glue.h
wxcore/: LICENSE  Setup.hs  configure  wxcore.cabal
wxcore/src/haskell/Graphics/UI/: WXCore.hs
wxcore/src/haskell/Graphics/UI/WXCore/: Controls.hs  Defines.hs  Dialogs.hs  DragAndDrop.hs  Draw.hs  Events.hs  Frame.hs  GHCiSupport.hs  Image.hs  Layout.hs  OpenGL.hs  Print.hs  Process.hs  Types.hs  WxcDefs.hs  WxcObject.hs  WxcTypes.hs
wxdirect/: wxdirect.cabal
wxdirect/src/: Classes.hs  CompileClassInfo.hs  CompileClassTypes.hs  CompileClasses.hs  CompileHeader.hs  CompileSTC.hs  DeriveTypes.hs  HaskellNames.hs  IOExtra.hs  Main.hs  MultiSet.hs  ParseC.hs  Types.hs
