Cabal-Version:  >= 1.8
Name:           wx
Version:        0.93.0.0
License:        OtherLicense
License-file:   license.txt
Homepage:       https://wiki.haskell.org/WxHaskell
Bug-reports:    https://sourceforge.net/p/wxhaskell/bugs/
Author:         Daan Leijen
Build-Type:     Simple
Category:       GUI, User interfaces
Description:    wxHaskell is a portable and native GUI library for Haskell.
                It is built on top of wxWidgets - a comprehensive C++
                library that is portable across all major GUI platforms;
                including GTK, Windows, X11, and MacOS X.  This version
                works with wxWidgets 2.9 and 3.0.
Maintainer:     wxhaskell-devel@lists.sourceforge.net
Synopsis:       wxHaskell
Data-Files:     wx.cabal

Library
    build-depends:
        base >= 4 && < 5,
        wxcore >= 0.92,
        stm,
        time >= 1.4.0

 Exposed-Modules:
  Graphics.UI.WX.Draw
  Graphics.UI.WX.Media
  Graphics.UI.WX.TopLevelWindow
  Graphics.UI.WX.Attributes
  Graphics.UI.WX.Window
  Graphics.UI.WX.Variable
  Graphics.UI.WX.Events
  Graphics.UI.WX.Frame
  Graphics.UI.WX.Layout
  Graphics.UI.WX.Controls
  Graphics.UI.WX.Types
  Graphics.UI.WX.Dialogs
  Graphics.UI.WX.Classes
  Graphics.UI.WX.Timer
  Graphics.UI.WX.Menu
  Graphics.UI.WX

 Hs-Source-Dirs: src

 ghc-options: -Wall -Wno-orphans
