name:         wxcore
version:      0.93.0.0
license:      OtherLicense
license-file: LICENSE
author:       Daan Leijen
maintainer:   wxhaskell-devel@lists.sourceforge.net
category:     GUI, User interfaces
synopsis:     wxHaskell core
description:
  wxHaskell is a portable and native GUI library for Haskell. It is
  built on top of wxWidgets, a comprehensive C++ library that is
  portable across all major GUI platforms, including GTK, Windows,
  X11, and MacOS X. This version works with wxWidgets 2.9 and 3.0.

  Distributed under the WXWINDOWS LIBRARY LICENSE. Please see
  LICENSE file, but note that this is essentially LGPL with an
  exception allowing binary distribution of proprietary software.
  This is the same license as wxWidgets itself uses.
homepage:     https://wiki.haskell.org/WxHaskell
bug-reports:  https://sourceforge.net/p/wxhaskell/bugs/

cabal-version: 2.0
build-type:    Configure

extra-tmp-files:
  src/haskell/Graphics/UI/WXCore/WxcClassInfo.hs
  src/haskell/Graphics/UI/WXCore/WxcClassTypes.hs
  src/haskell/Graphics/UI/WXCore/WxcClasses.hs
  src/haskell/Graphics/UI/WXCore/WxcClassesAL.hs
  src/haskell/Graphics/UI/WXCore/WxcClassesMZ.hs

library
  default-language:
    Haskell2010

  hs-source-dirs:
    src/haskell

  exposed-modules:
    Graphics.UI.WXCore
    Graphics.UI.WXCore.Controls
    Graphics.UI.WXCore.Defines
    Graphics.UI.WXCore.Dialogs
    Graphics.UI.WXCore.DragAndDrop
    Graphics.UI.WXCore.Draw
    Graphics.UI.WXCore.Events
    Graphics.UI.WXCore.Frame
    Graphics.UI.WXCore.Image
    Graphics.UI.WXCore.Layout
    Graphics.UI.WXCore.OpenGL
    Graphics.UI.WXCore.Print
    Graphics.UI.WXCore.Process
    Graphics.UI.WXCore.Types
    Graphics.UI.WXCore.WxcClassInfo
    Graphics.UI.WXCore.WxcClassTypes
    Graphics.UI.WXCore.WxcClasses
    Graphics.UI.WXCore.WxcClassesAL
    Graphics.UI.WXCore.WxcClassesMZ
    Graphics.UI.WXCore.WxcDefs
    Graphics.UI.WXCore.WxcObject
    Graphics.UI.WXCore.WxcTypes

  autogen-modules:
    Graphics.UI.WXCore.WxcClassInfo
    Graphics.UI.WXCore.WxcClassTypes
    Graphics.UI.WXCore.WxcClasses
    Graphics.UI.WXCore.WxcClassesAL
    Graphics.UI.WXCore.WxcClassesMZ

  other-modules:
    Graphics.UI.WXCore.GHCiSupport

  frameworks:
    Carbon

  build-depends:
    array >= 0.2 && < 0.6,
    base >= 4 && < 5,
    containers >= 0.2 && < 0.7,
    bytestring,
    filepath,
    parsec,
    stm,
    directory,
    time

  pkgconfig-depends:
    wxc

  -- Find GL/glx.h include path using pkg-config
  if os(freebsd) || os(netbsd)
    pkgconfig-depends: gl

  build-tool-depends:
    wxdirect:wxdirect >= 0.91

  extra-libraries: wxc

  ghc-options: -Wall
