cabal-version:       2.0
name:                samplesTest
version:             0.93.0.0
synopsis:            Sample programs for wxHaskell
homepage:            https://wiki.haskell.org/WxHaskell
license:             BSD3
license-file:        LICENSE.txt
author:              <Several authors>
maintainer:          -
category:            Graphics
build-type:          Simple
extra-source-files:  ChangeLog.md

data-files:
  STCLexer.hs
  utf-tests
  XRCControls/xrcmenu.xrc

executable BoxedCombinator
  main-is:             BoxedCombinator.hs
  build-depends:       base,
                       wxcore,
                       wx
  default-language:    Haskell2010
  ghc-options:         -Wall


executable CheckBoxWidth
  main-is:             CheckBoxWidth.hs
  build-depends:       base,
                       wxcore,
                       wx
  default-language:    Haskell2010
  ghc-options:         -Wall


executable Resize
  main-is:             Resize.hs
  build-depends:       base,
                       wxcore,
                       wx
  default-language:    Haskell2010
  ghc-options:         -Wall


executable STC
  main-is:             STC.hs
  build-depends:       base,
                       wxcore,
                       wx
  default-language:    Haskell2010
  ghc-options:         -Wall


executable STC2
  main-is:             STC2.hs
  build-depends:       base,
                       wxcore,
                       wx
  default-language:    Haskell2010
  ghc-options:         -Wall


executable STCEvent
  main-is:             STCEvent.hs
  build-depends:       base,
                       wxcore,
                       wx
  default-language:    Haskell2010
  ghc-options:         -Wall


executable STCLexer
  main-is:             STCLexer.hs
  build-depends:       base,
                       wxcore,
                       wx
  other-modules:       Paths_samplesTest,
                       UTF8
  autogen-modules:     Paths_samplesTest
  default-language:    Haskell2010
  ghc-options:         -Wall


executable TreeCtrlTest
  main-is:             TreeCtrlTest.hs
  build-depends:       base,
                       wxcore,
                       wx,
                       HUnit
  other-modules:       Paths_samplesTest
  autogen-modules:     Paths_samplesTest
  default-language:    Haskell2010
  ghc-options:         -Wall


library UTF8
  build-depends:       base
  default-language:    Haskell2010
  ghc-options:         -Wall


executable UTF8Sampler
  main-is:             UTF8Sampler.hs
  build-depends:       base,
                       wxcore,
                       wx
  other-modules:       Paths_samplesTest,
                       UTF8
  autogen-modules:     Paths_samplesTest
  default-language:    Haskell2010
  ghc-options:         -Wall
